入力機能の追加

--- a/AOJ_App/AOJ_App/MainWindow.xaml
+++ b/AOJ_App/AOJ_App/MainWindow.xaml
@@ -8,14 +8,15 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="584.095" Width="800">
     <Grid Margin="0,0,0.333,-19.333">
-        <avalonEdit:TextEditor 
-            x:Name="configEdit"
-            Document="{Binding ConfigurationDoc,Mode=TwoWay}"
-            SyntaxHighlighting="C#"
-            ShowLineNumbers="True"
-            FontFamily="Consolas" FontSize="10Pt" Margin="0,26,73,279.333" HorizontalAlignment="Right" Width="681"/>
-        <Button Content="Button" Height="64" Margin="39,0,500,161.333" VerticalAlignment="Bottom"/>
-        <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="491,0,0,161.333" VerticalAlignment="Bottom" Width="229"/>
+        <avalonEdit:TextEditor
+				Name="editor"
+				FontFamily="Consolas"
+				FontSize="10pt"
+				SyntaxHighlighting="C++" Height="462" VerticalAlignment="Top"
+			>Welcome to AvalonEdit!
+        </avalonEdit:TextEditor>
+        <Button Content="Button" Height="64" Margin="39,0,500,43" VerticalAlignment="Bottom"/>
+        <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="502,0,0,43" VerticalAlignment="Bottom" Width="229"/>
 
     </Grid>
 </Window>
