--- a/AOJ_App/AOJ_App/MainWindow.xaml
+++ b/AOJ_App/AOJ_App/MainWindow.xaml
@@ -16,7 +16,7 @@
 			>Welcome to AvalonEdit!
         </avalonEdit:TextEditor>
         <Button Content="Button" Height="64" Margin="39,0,500,43" VerticalAlignment="Bottom"/>
-        <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="502,0,0,43" VerticalAlignment="Bottom" Width="229"/>
+        <Button x:Name="Compile" Content="Compile" HorizontalAlignment="Left" Height="64" Margin="502,0,0,43" VerticalAlignment="Bottom" Width="229" Click="Compile_Click"/>
 
     </Grid>
 </Window>
