--- a/AOJ_App/AOJ_App/MainWindow.xaml
+++ b/AOJ_App/AOJ_App/MainWindow.xaml
@@ -1,27 +1,8 @@
-﻿<Window x:Class="AOJ_App.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AOJ_App"
-        xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="584.095" Width="800">
-    <Grid Margin="0,0,0.333,-19.333">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="177*"/>
-            <ColumnDefinition Width="616*"/>
-        </Grid.ColumnDefinitions>
-        <avalonEdit:TextEditor
-				Name="editor"
-				FontFamily="Consolas"
-				FontSize="10pt"
-				SyntaxHighlighting="C++" Height="462" VerticalAlignment="Top" Grid.ColumnSpan="2" ShowLineNumbers="True" 
-			>Welcome to AvalonEdit!
-        </avalonEdit:TextEditor>
-        <Button Content="Button" Height="64" Margin="39,0,500,43" VerticalAlignment="Bottom" Grid.ColumnSpan="2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Height="64" Margin="325.443,0,0,43" VerticalAlignment="Bottom" Width="229" Grid.Column="1"/>
-        <Button Content="Button" Height="64" Margin="39,0,500,43" VerticalAlignment="Bottom"/>
-        <Button x:Name="Compile" Content="Compile" HorizontalAlignment="Left" Height="64" Margin="502,0,0,43" VerticalAlignment="Bottom" Width="229" Click="Compile_Click"/>
-    </Grid>
-</Window>
+﻿<mui:ModernWindow x:Class="MuiTest.MainWindow"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:mui="http://firstfloorsoftware.com/ModernUI"
+  Title="MainWindow" Height="350" Width="525">
+</mui:ModernWindow>
+
+
