--- a/AOJ_App/AOJ_App/MainWindow.xaml
+++ b/AOJ_App/AOJ_App/MainWindow.xaml
@@ -6,9 +6,7 @@
     <mui:ModernWindow.MenuLinkGroups>
         <mui:LinkGroup DisplayName="group 1" >
             <mui:LinkGroup.Links>
-                <mui:Link DisplayName="link 1" Source="/Design/Page1.xaml" />
-                <mui:Link DisplayName="link 2" />
-                <mui:Link DisplayName="link 3" />
+                <mui:Link DisplayName="link 1" Source="/Design/pageLogin.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
     </mui:ModernWindow.MenuLinkGroups>
